Fix loader bugs